# reproduction_rules_go_0_59

./: BUILD  MODULE.bazel  README.md  world.go  world_go_test.go
